--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "homepage": "https://realmichaeltao.github.io"
+  "homepage": "https://realmichaeltao.github.io",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/realmichaeltao/realmichaeltao.github.io.git"
+  }
 }
